--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -6,7 +6,7 @@
   --font: "Inter", sans-serif;
   --body-color: #637381;
   --heading-color: #212b36;
-  --primary-color: #3056d3;
+  --primary-color: #23a455;
   --white: #ffffff;
 }
 
@@ -146,9 +146,17 @@ p {
   background: var(--primary-color);
 }
 
+.about-image{
+  margin-top: 10% !important;
+}
+
 .ud-main-btn:hover {
   color: var(--white);
   background: var(--heading-color);
+}
+
+.chevron-right{
+  color: white;
 }
 
 @media (max-width: 767px) {
@@ -194,17 +202,10 @@ p {
 
 /* ===== Header CSS ===== */
 .ud-header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 99;
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-}
-
-.sticky {
-  position: fixed;
   z-index: 99;
   background-color: rgba(255, 255, 255, 0.8);
   -webkit-backdrop-filter: blur(5px);
@@ -215,14 +216,9 @@ p {
   transition: all 0.3s ease-out 0s;
 }
 
-.sticky .navbar {
-  padding: 0;
-}
 .navbar .startup-logo{
   color: var(--white);
-}
-.sticky .navbar .startup-logo{
-  color: var(--primary-color) !important;
+  margin-left: 45px;
 }
 .navbar {
   padding: 0px 0;
@@ -230,6 +226,14 @@ p {
   position: relative;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
+  margin-right: 50px;
+}
+
+@media (max-width:412px){
+  .navbar .startup-logo{
+    margin-left: 15px;
+
+  }
 }
 
 .navbar-brand {
@@ -246,6 +250,11 @@ p {
   max-width: 160px;
 }
 
+@media (max-width: 412px){
+  .navbar-brand img {
+    max-width: 120px;
+  }
+}
 .navbar-toggler {
   padding: 0;
 }
@@ -253,7 +262,7 @@ p {
 .navbar-toggler .toggler-icon {
   width: 30px;
   height: 2px;
-  background-color: var(--white);
+  background-color: var(--heading-color);
   display: block;
   margin: 5px 0;
   position: relative;
@@ -440,7 +449,6 @@ p {
   .navbar-btn {
     position: absolute;
     top: 50%;
-    right: 50px;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
   }
@@ -463,47 +471,48 @@ p {
   background: white;
   color: var(--heading-color);
 }
-
-.sticky .navbar-toggler .toggler-icon {
-  background-color: var(--heading-color);
-}
-
-.sticky .navbar-nav .nav-item:hover > a {
+.ud-header .navbar-nav .nav-item:hover > a {
   color: var(--primary-color);
   opacity: 1;
 }
 
-.sticky .navbar-nav .nav-item a {
+.ud-header .navbar-nav .nav-item a {
   color: var(--heading-color);
 }
 
-.sticky .navbar-nav .nav-item a.active, .sticky .navbar-nav .nav-item a:hover {
+.ud-header .navbar-nav .nav-item a.active, .sticky .navbar-nav .nav-item a:hover {
   color: var(--primary-color);
   opacity: 1;
 }
 
-.sticky .navbar-btn .ud-main-btn.ud-login-btn {
+.ud-header .navbar-btn .ud-main-btn.ud-login-btn {
   color: var(--heading-color);
 }
 
-.sticky .navbar-btn .ud-main-btn.ud-login-btn:hover {
+.ud-header .navbar-btn .ud-main-btn.ud-login-btn:hover {
   color: var(--primary-color);
   opacity: 1;
 }
 
-.sticky .navbar-btn .ud-white-btn {
+.ud-header .navbar-btn .ud-white-btn {
   background: var(--primary-color);
   color: var(--white);
 }
 
-.sticky .navbar-btn .ud-white-btn:hover {
+.ud-header .navbar-btn .ud-white-btn:hover {
   background: var(--heading-color);
 }
 
 /* ===== Hero CSS ===== */
 .ud-hero {
-  background: var(--primary-color);
-  padding-top: 180px;
+  margin-top: 5%;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.navbar-nav.mx-auto{
+  margin-left: auto!important;
+  margin-right: 0 !important;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -512,38 +521,29 @@ p {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 412px) {
   .ud-hero {
-    padding-top: 130px;
+    margin-top: 24%;
   }
 }
 
-.ud-hero-content {
-  max-width: 780px;
-  margin: auto;
-  margin-bottom: 30px;
-}
 
-.ud-hero-content .ud-hero-title {
+
+.ud-hero-info {
   color: var(--white);
+  position: relative;
+  margin-top: 20%;
   font-weight: 700;
-  font-size: 45px;
-  line-height: 60px;
-  text-align: center;
   margin-bottom: 30px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .ud-hero-content .ud-hero-title {
-    font-size: 38px;
-    line-height: 50px;
+  .ud-hero-info {
   }
 }
 
 @media (max-width: 767px) {
-  .ud-hero-content .ud-hero-title {
-    font-size: 26px;
-    line-height: 38px;
+  .ud-hero-content .ud-hero-info {
   }
 }
 
@@ -629,44 +629,68 @@ p {
 }
 
 .ud-hero-image {
-  max-width: 845px;
+  max-width: 80px;
   margin: auto;
   text-align: center;
   position: relative;
   z-index: 1;
 }
 
-.ud-hero-image img {
+.ud-hero .hero-img{
   max-width: 100%;
   text-align: center;
+  margin-top: 2%;
 }
 
-.ud-hero-image .shape {
-  position: absolute;
-  z-index: -1;
-}
-
-.ud-hero-image .shape.shape-1 {
-  bottom: 0;
-  left: -30px;
-}
-
-.ud-hero-image .shape.shape-2 {
-  top: -20px;
-  right: -20px;
-}
-
-/* ===== Features CSS ===== */
-.ud-features {
-  padding-top: 120px;
-  padding-bottom: 90px;
+.hero-img-phn{
+  display: none ;
 }
 
 @media (max-width: 767px) {
-  .ud-features {
-    padding-top: 80px;
-    padding-bottom: 40px;
+  .ud-hero .hero-img{
+    margin-top: 12%;
+    height: 600px;
   }
+}
+
+@media (max-width:412px){
+  .ud-hero .hero-img
+   {
+    display: none ;
+  }
+  .hero-img-phn{
+    display: flex;
+    height: 500;
+    margin-top: 10%;
+  }
+}
+
+/* ===== Features CSS ===== */
+#features .container{
+  width: 100%;
+  max-width: 1500px;
+}
+
+.row .note-text{
+  padding-left: 600px;
+}
+
+@media (max-width:767px){
+  .row .note-text{
+    padding-left: 20px;
+  }
+  #features .note-text{
+    font-size: 16px;
+    margin-left: 0px;
+  }
+  .note-text.btn-success div{
+    padding: 10px;
+  }
+}
+
+.ud-features {
+  padding-top: 120px;
+  padding-bottom: 90px;
 }
 
 .ud-section-title {
@@ -680,6 +704,49 @@ p {
   color: var(--primary-color);
   margin-bottom: 10px;
 }
+
+@media (max-width: 767px) {
+  .ud-features {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
+  #features .container{
+    width: 100%;
+    max-width: 800px;
+  }
+
+  .ud-section-title span {
+    font-weight: 600;
+    font-size: 8px;
+    color: var(--primary-color);
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 412px) {
+  .ud-features {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  #features .container{
+    width: 100%;
+    max-width: 800px;
+  }
+
+  .ud-section-title{
+    margin-bottom: 40px;
+  }
+
+  .ud-section-title span {
+    font-weight: 600;
+    font-size: 8px;
+    color: var(--primary-color);
+    margin-bottom: 10px;
+  }
+}
+
 
 .ud-section-title h2 {
   font-weight: 700;
@@ -696,6 +763,9 @@ p {
 }
 
 @media (max-width: 767px) {
+  .ud-section-title h2 {
+    font-size: 32px;
+  }
   .ud-section-title p {
     font-size: 16px;
     line-height: 26px;
@@ -704,6 +774,8 @@ p {
 
 .ud-single-feature {
   margin-bottom: 40px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .ud-single-feature:hover .ud-feature-icon::before {
@@ -733,6 +805,39 @@ p {
   margin-bottom: 40px;
 }
 
+@media (max-width:767px){
+  .ud-single-feature .ud-feature-icon {
+    width: 40px;
+    height: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-radius: 7px;
+    background: var(--primary-color);
+    font-size: 32px;
+    color: var(--white);
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width:412px) {
+  .ud-features .col-sm-6{
+    text-align: center;
+  }
+  .ud-feature-icon{
+    margin-left: 40%;
+  }
+}
+
 .ud-single-feature .ud-feature-icon::before {
   content: "";
   position: absolute;
@@ -750,11 +855,26 @@ p {
   transition: all 0.3s ease-out 0s;
 }
 
+@media (max-width:767px){
+  .ud-single-feature .ud-feature-icon::before {
+    border-radius: 7px;
+  }
+}
+
 .ud-single-feature .ud-feature-title {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 30px;
   line-height: 28px;
   margin-bottom: 12px;
+}
+
+@media (max-width: 767px){
+  .ud-single-feature .ud-feature-title{
+    font-size: 20px;
+  }
+  .ud-section-title span{
+    font-size: 20px;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -765,9 +885,14 @@ p {
 }
 
 .ud-single-feature .ud-feature-desc {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 24px;
   margin-bottom: 40px;
+}
+@media (max-width: 767px){
+  .ud-single-feature .ud-feature-desc{
+    font-size: 16px;
+  }
 }
 
 .ud-single-feature .ud-feature-link {
@@ -874,12 +999,29 @@ p {
 .ud-pricing {
   padding-top: 120px;
   padding-bottom: 90px;
+  background: #f3f4fe;
+}
+
+.ud-pricing img{
+  height: 10rem;
+}
+
+.ud-pricing .card{
+  width: 20rem;
+  height: 24rem;
+  padding: 20px;
+}
+.ud-faq .card .card-body{
+  text-align: left !important;
 }
 
 @media (max-width: 767px) {
   .ud-pricing {
     padding-top: 80px;
     padding-bottom: 40px;
+  }
+  .ud-pricing .card {
+
   }
 }
 
@@ -941,18 +1083,6 @@ p {
   font-weight: 600;
 }
 
-.ud-single-pricing .ud-pricing-header h3 {
-  font-weight: 500;
-  font-size: 15px;
-  margin-bottom: 8px;
-}
-
-.ud-single-pricing .ud-pricing-header h4 {
-  font-weight: 600;
-  font-size: 26px;
-  color: var(--primary-color);
-  margin-bottom: 40px;
-}
 
 .ud-single-pricing .ud-pricing-body {
   margin-bottom: 40px;
@@ -995,7 +1125,7 @@ p {
 .ud-faq {
   padding-top: 120px;
   padding-bottom: 90px;
-  background: #f3f4fe;
+  background: white;
   position: relative;
   z-index: 1;
 }
@@ -1101,6 +1231,7 @@ p {
 }
 
 .ud-single-testimonial {
+  height: 23rem; 
   padding: 30px;
   -webkit-box-shadow: 0px 60px 120px -20px #ebeffd;
           box-shadow: 0px 60px 120px -20px #ebeffd;
@@ -1118,6 +1249,7 @@ p {
 
 .ud-single-testimonial .ud-testimonial-content {
   margin-bottom: 25px;
+  height: 12rem;
 }
 
 .ud-single-testimonial .ud-testimonial-content p {
@@ -1356,9 +1488,7 @@ p {
 }
 
 .ud-contact-info-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -2025,12 +2155,6 @@ p {
 
 .ud-blog-details-content {
   padding-top: 60px;
-}
-
-@media only screen and (min-width: 1400px) and (max-width: 1920px), only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .ud-blog-details-content {
-    padding-right: 50px;
-  }
 }
 
 .ud-blog-details-title {
